--- a/public/manager.html
+++ b/public/manager.html
@@ -63,9 +63,9 @@
                 <thead>
                     <tr>
                         <th style="width: 50px;"></th>
-                        <th>名称</th>
-                        <th style="width: 100px;">大小</th>
-                        <th style="width: 180px;">日期</th>
+                        <th class="sortable" data-sort="name">名称 <i class="fas fa-sort sort-icon"></i></th>
+                        <th class="sortable" data-sort="size" style="width: 100px;">大小 <i class="fas fa-sort sort-icon"></i></th>
+                        <th class="sortable" data-sort="date" style="width: 180px;">日期 <i class="fas fa-sort sort-icon"></i></th>
                     </tr>
                 </thead>
                 <tbody id="itemListBody"></tbody>
