--- a/public/manager.html
+++ b/public/manager.html
@@ -6,6 +6,10 @@
     <title>网络文件管理器</title>
     <link rel="stylesheet" href="/manager.css">
     <link rel="stylesheet" href="/vendor/fontawesome/css/all.min.css">
+    
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
+    
     <script src="/vendor/axios/axios.min.js"></script>
     <script src="/manager.js"></script>
 </head>
